cambio en los roles

--- a/granja_media_luna/clientes.html
+++ b/granja_media_luna/clientes.html
@@ -65,7 +65,7 @@
 
     <!-- Contenedor principal -->
     <div class="container">
-        <div class="form-container">
+        <div class="form-container admin-only-content">
             <h2>Agregar Nuevo Cliente</h2>
             <form id="clienteForm" data-validate>
                 <div class="form-group">
