--- a/granja_media_luna/productos.html
+++ b/granja_media_luna/productos.html
@@ -91,7 +91,7 @@
 
 
     <!-- Contenedor principal -->
-    <div class="container">
+    <div class="container admin-only-content">
         <div class="form-container">
             <h2>Agregar Nuevo Productos</h2>
             <form id="productoForm" data-validate>
@@ -169,7 +169,6 @@
     
     <script src="js/main.js"></script>
     <script src="js/productos.js"></script>
-    <script src="js/productos_test.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             updateSessionUI(); // Actualizar UI de sesión
