--- a/granja_media_luna/registro.html
+++ b/granja_media_luna/registro.html
@@ -53,12 +53,10 @@
                     <input type="password" id="confirmar_contrasena" name="confirmar_contrasena" class="form-control" required minlength="4">
                 </div>
 
-                <div class="form-group">
-                    <label for="rol" class="form-label">Tipo de Usuario *</label>
-                    <select id="rol" name="rol" class="form-control" required>
-                        <option value="empleado">Empleado</option>
-                        <option value="admin">Administrador</option>
-                    </select>
+                <input type="hidden" name="rol" value="empleado">
+                <div class="alert alert-info" style="background-color: #d1ecf1; border: 1px solid #bee5eb; padding: 1rem; border-radius: 5px; color: #0c5460;">
+                    <i class="fas fa-info-circle"></i> Se registrará como <strong>Empleado</strong>. 
+                    Contacta al administrador si necesitas permisos adicionales.
                 </div>
 
                 <button type="submit" class="btn btn-primary" style="width: 100%;">
