--- a/granja_media_luna/registro.html
+++ b/granja_media_luna/registro.html
@@ -53,9 +53,9 @@
                     <input type="password" id="confirmar_contrasena" name="confirmar_contrasena" class="form-control" required minlength="4">
                 </div>
 
-                <input type="hidden" name="rol" value="empleado">
+                <input type="hidden" name="rol" value="usuario">
                 <div class="alert alert-info" style="background-color: #d1ecf1; border: 1px solid #bee5eb; padding: 1rem; border-radius: 5px; color: #0c5460;">
-                    <i class="fas fa-info-circle"></i> Se registrará como <strong>Empleado</strong>. 
+                    <i class="fas fa-info-circle"></i> Se registrará como <strong>Usuario</strong>. 
                     Contacta al administrador si necesitas permisos adicionales.
                 </div>
 
