--- a/granja_media_luna/catalogo.html
+++ b/granja_media_luna/catalogo.html
@@ -31,6 +31,10 @@
                         <a href="contacto.html" class="nav-link">Contacto</a>
                     </li>
                     <!-- Enlaces solo para usuarios logueados -->
+                    <li class="nav-item usuario-only" style="display: none;">
+                        <a href="compras.html" class="nav-link">Compras</a>
+                    </li>
+                    <!-- Enlaces solo para administradores -->
                     <li class="nav-item admin-only" style="display: none;">
                         <a href="productos.html" class="nav-link">Gestión Productos</a>
                     </li>
