--- a/granja_media_luna/productos.html
+++ b/granja_media_luna/productos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Productos - Granja Media Luna</title>
+    <link rel="icon" type="image/png" href="img/image.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/productos.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -17,7 +18,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <i class="fas fa-egg"></i>
+                    <img src="img/image.png" alt="Granja Media Luna" class="logo-img">
                     <span>Granja Media Luna</span>
                 </div>
                 <ul class="nav-menu">
