--- a/granja_media_luna/compras.html
+++ b/granja_media_luna/compras.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compras - Granja Media Luna</title>
+    <link rel="icon" type="image/png" href="img/image.png">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -14,7 +15,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <i class="fas fa-egg"></i>
+                    <img src="img/image.png" alt="Granja Media Luna" class="logo-img">
                     <span>Granja Media Luna</span>
                 </div>
                 <ul class="nav-menu">
