--- a/granja_media_luna/registro.html
+++ b/granja_media_luna/registro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - Granja Media Luna</title>
+    <link rel="icon" type="image/png" href="img/image.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -12,7 +13,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="index.html" class="nav-logo">
-                <i class="fas fa-egg"></i>
+                <img src="img/image.png" alt="Granja Media Luna" class="logo-img">
                 Granja Media Luna
             </a>
             <div class="nav-links">
